--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <main>
+      <p><b>Multiplayer classic snake game</b></p>
       <p>If loading is ever taking too long or you get an error, consider quit/cancel or refreshing the page.</p>
       <p id="beginInfo">Host a session or join an existing one.</p>
       <p hidden id="peerId">LOADING</p>
